# kchacha20

./: .gitignore  build.gradle.kts  gradle.properties  local.properties  readme.md  settings.gradle.kts
.github/workflows/: publish.yml
.kotlin/metadata/kotlinCInteropLibraries/: kchacha20lib-iosArm64Cinterop-uniffiMain-6dbviw.klib  kchacha20lib-iosSimulatorArm64Cinterop-uniffiMain-J1SCMw.klib  kchacha20lib-iosX64Cinterop-uniffiMain-XSrvXw.klib  klib-iosArm64Cinterop-uniffiMain-CgkDeQ.klib  klib-iosArm64Cinterop-uniffiMain-Hfb4qw.klib  klib-iosArm64Cinterop-uniffiMain-YMBYvw.klib  klib-iosArm64Cinterop-uniffiMain-Z3bAxA.klib  klib-iosArm64Cinterop-uniffiMain-fYY6AA.klib  klib-iosArm64Cinterop-uniffiMain-nnjXaA.klib  klib-iosSimulatorArm64Cinterop-uniffiMain-FelG5g.klib  klib-iosSimulatorArm64Cinterop-uniffiMain-O0NlnA.klib  klib-iosSimulatorArm64Cinterop-uniffiMain-PrfZ-A.klib  klib-iosSimulatorArm64Cinterop-uniffiMain-_7tf9A.klib  klib-iosSimulatorArm64Cinterop-uniffiMain-grvKGA.klib  klib-iosSimulatorArm64Cinterop-uniffiMain-hOSXZQ.klib  klib-iosX64Cinterop-uniffiMain-ayKwYw.klib  klib-iosX64Cinterop-uniffiMain-f6DQeQ.klib  klib-iosX64Cinterop-uniffiMain-iGihiA.klib  klib-iosX64Cinterop-uniffiMain-nlCfLQ.klib  klib-iosX64Cinterop-uniffiMain-qtU58Q.klib  klib-iosX64Cinterop-uniffiMain-sYPxcA.klib
.kotlin/metadata/kotlinTransformedCInteropMetadataLibraries/: .kchacha20lib-nativeMain.cinteropLibraries.json  (+1 more)
core/: Cargo.toml
core/src/: libs.rs
gradle/: libs.versions.toml
kchacha20lib/: build.gradle.kts
klib/: build.gradle.kts
(+31 files in other folders)
